<resources>
    <string name="app_name">Klshee</string>

    <string name="facebook_app_id">237687777046606</string>
    <string name="MapApiKey">AIzaSyBn4of2zRF2CinFhu5jJzBDxuDL24nCAec</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account"><U>Create Account</U></string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="hide">Hide</string>
    <string name="by_signing_up_you_agree_to_the_klshee">By signing up.you agree to the Klshee</string>
    <string name="terms_of_service_and_privacy_policy"><font color="#FF7D7E">Terms of Service</font> <font color="white">and </font> <font color="#FF7D7E">Privacy Policy.</font> </string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="checkemail">Please enter Email Id</string>
    <string name="checkemailvalidation">Please enter valid Email Id</string>
    <string name="checkpassword">Please enter Password.</string>
    <string name="we_just_need_your_registered_email_id_to_send_you_password_reset_instructions">We just need your registered Email id to send you password reset instructions.</string>
    <string name="submit">Submit</string>
    <string name="titleForgotPassword">Forgot Password</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="otp">OTP</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="PleaseenterOTp">Please enter OTP</string>
    <string name="PleaseenterNewpassword">Please enter New Password</string>
    <string name="Confirmpassword">Please enter Confirm password</string>
    <string name="password">Password</string>
    <string name="pleaseenterPassword">Please enter Password</string>
    <string name="enterName">Please enter Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chat">Chat</string>
    <string name="post">Post</string>
    <string name="klshee">Klshee</string>
    <string name="city">City</string>
    <string name="selling">Selling</string>
    <string name="sold">Sold</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="delete">Delete</string>
    <string name="repost_add">Repost Add</string>
    <string name="post_an_offer">Post an Offer</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="title">TITLE</string>
    <string name="next">NEXT</string>
    <string name="describe_your_item">Describe Your Item</string>
    <string name="real_estate">Real estate</string>
    <string name="description">DESCRIPTION</string>
    <string name="type_your_text_here">Type your text here</string>
    <string name="item_type">ITEM TYPE</string>
    <string name="used">Used</string>
    <string name="mnew">New</string>
    <string name="property_type">PROPERTY TYPE</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="set_yor_price">Set Your Price</string>
    <string name="post_item">Post Item</string>
    <string name="choose_your_location">Choose your location</string>
    <string name="chats">Chats</string>
    <string name="filters">Filters</string>
    <string name="reset_filter">Reset Filter</string>
    <string name="choose_category">Choose Category</string>
    <string name="set_a_price_range">Set a price range</string>
    <string name="to">To</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="latest">Latest</string>
    <string name="soting">Soting</string>
    <string name="oldest">Oldest</string>
    <string name="price_low_to_high">Price: Low to High</string>
    <string name="price_high_to_low">Price: High to Low</string>
    <string name="apply">Apply</string>
    <string name="setting">Setting</string>
    <string name="edit">EDIT</string>
    <string name="other">OTHER</string>
    <string name="help">Help</string>
    <string name="about_klshee">About Klshee</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="log_out">Log Out</string>
    <string name="old_password">Old Password</string>
    <string name="change_password">Change Password</string>
    <string name="message">Message</string>
    <string name="Pleasewait">Please wait</string>
    <string name="ThisEmailisalreadyexits">This email is already exits</string>
    <string name="show">Show</string>
    <string name="price">Price</string>
    <string name="sendLinkMail">Account create Successfully, Link has been sent on your mail.Please check and activate Account!</string>
    <string name="AccountnotActivite"> Your account has not been activated yet. Please check your mail and activate your Account!</string>
    <string name="joined">Joined</string>
    <string name="UpdateProfile">Updating Profile</string>
    <string name="done">DONE</string>


    <array name="Blue_image">
        <item>@mipmap/blue_realestate</item>
        <item>@mipmap/blue_cars</item>
        <item>@mipmap/blue_phone</item>
        <item>@mipmap/blue_electronics</item>
        <item>@mipmap/blue_jobs</item>
        <item>@mipmap/blue_fashion</item>
        <item>@mipmap/blue_accesories</item>
        <item>@mipmap/blue_funiture</item>
        <item>@mipmap/blue_beauty</item>
        <item>@mipmap/blue_autoparts</item>
        <item>@mipmap/blue_other</item>

    </array>
    <array name="Red_image">
        <item>@mipmap/red_realestate</item>
        <item>@mipmap/red_cars</item>
        <item>@mipmap/red_phone</item>
        <item>@mipmap/red_electronics</item>
        <item>@mipmap/red_jobs</item>
        <item>@mipmap/red_fashion</item>
        <item>@mipmap/red_accesories</item>
        <item>@mipmap/red_funiture</item>
        <item>@mipmap/red_beauty</item>
        <item>@mipmap/red_autoparts</item>
        <item>@mipmap/red_other</item>
    </array>

    <string-array name="Filter_type">
        <item>"Real Estate"</item>
        <item>"Cars"</item>
        <item>"Cell\nPhones"</item>
        <item>"Electronics"</item>
        <item>"Jobs"</item>
        <item>"Fashion"</item>
        <item>"Accessories"</item>
        <item>"Furniture"</item>
        <item>"Beauty&amp;\nHealth"</item>
        <item>"Auto\nParts"</item>
        <item>"Other"</item>

    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="add_up_to_20_more_photos_optional">Add up to 20 more photos(Optional)</string>
    <string name="take20photo">You have take maximum 20 Photos</string>
    <string name="open_camare">OPEN CAMERA</string>
    <string name="open_gallery">OPEN GALLERY</string>
    <string name="cancel">CANCEL</string>
    <string name="PleaseselectAtleastonephoto">Please select Atleast one Photo</string>
    <string name="PleasEnterTitle">Please enter Title</string>
    <string name="PleaseSelect_Category">Please select Category</string>
    <string name="PleaseenterDescription">Please enter Description</string>
    <string name="chooseyourlocation">Choose your location</string>
    <string name="PLeaseenterPrice">Please enter Price</string>
    <string name="PleaseselectCity">Please select City</string>
    <string name="pleaseselectItemType">Please select ItemType</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="no_product_available">Please post Advertisement</string>
    <string name="areyousureyouwanttodelete">Are you sure?, you want to delete this ADD</string>
    <string name="confirm">Confirm</string>
    <string name="pending">Pending</string>
    <string name="nothing_here_match_you_search">Nothing here match you search</string>
    <string name="default_notification_channel_id" />
    <string name="type_a_message">Type a message....</string>
    <string name="buying">Buying</string>
    <string name="all">All</string>
</resources>
