<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kalshee.FilterActivity"
    android:orientation="vertical"
    >

   <RelativeLayout
       android:id="@+id/mTool_Relative"
       android:layout_width="match_parent"
       android:layout_height="@dimen/toolbar_height"
       android:background="#F6F6F6"
       android:layout_alignParentTop="true"
       >

       <ImageButton
           android:id="@+id/ib_Back"
           android:layout_width="60dp"
           android:layout_height="match_parent"
           android:src="@mipmap/blue_back"
           android:background="@null"
           />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/filters"
           android:textColor="@color/colorAccent"
           android:layout_centerVertical="true"
           android:layout_toRightOf="@+id/ib_Back"
           />

       <TextView
           android:id="@+id/tv_resetFilter"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="@string/reset_filter"
           android:layout_centerVertical="true"
           android:layout_alignParentRight="true"
           android:gravity="center_vertical"
           android:layout_marginRight="12dp"
           />

   </RelativeLayout>
    <View
        android:id="@+id/mLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray"
        android:layout_below="@+id/mTool_Relative"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mLine"
        android:layout_above="@+id/Bt_Apply"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_category"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:layout_margin="10dp"
                android:drawableLeft="@mipmap/choose_category"
                android:drawablePadding="10dp"
                android:gravity="center"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mRecycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
            </android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_a_price_range"
                android:layout_gravity="center"
                android:textColor="@color/colorAccent"
                android:layout_margin="10dp"
                android:drawableLeft="@mipmap/set_price"
                android:drawablePadding="10dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/colorAccent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                >

                <EditText
                    android:id="@+id/et_Minimum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/minimum"
                    android:inputType="number"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:background="@drawable/border_blue_edit_back"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />
                <EditText
                    android:id="@+id/et_Maximum"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/maximum"
                    android:background="@drawable/border_blue_edit_back"
                    android:inputType="number"
                    android:maxLength="15"
                    android:singleLine="true"
                    android:gravity="center"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soting"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <RadioGroup
                android:id="@+id/mRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                >
                <RadioButton
                    android:id="@+id/Rd_latest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest"
                    />
                <RadioButton
                    android:id="@+id/Rd_Oldest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oldest"
                    />
                <RadioButton
                    android:id="@+id/Rd_LowtoHigh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_low_to_high"
                    />
                <RadioButton
                    android:id="@+id/Rd_HightoLow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_high_to_low"
                    />

            </RadioGroup>
            <LinearLayout
                android:id="@+id/mRent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                />
            <RadioGroup
                android:id="@+id/mRentType_RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp"
                >
                <RadioButton
                    android:id="@+id/Rd_buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy"
                    />
                <RadioButton
                    android:id="@+id/Rd_Rent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rent"
                    />

            </RadioGroup>
            </LinearLayout>
            <Button
                android:id="@+id/Bt_Apply"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/apply"
                android:textColor="#fff"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/apply_marginTop"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
