<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgound"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    >

    <RelativeLayout
        android:id="@+id/mTool_Relative"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@mipmap/backicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ResetPassword"
            android:textColor="#fff" />
    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        >

        <EditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_back"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/otp"
            android:singleLine="true"
            />
        <EditText
            android:id="@+id/et_newPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_back"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/new_password"
            android:singleLine="true"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/et_ConPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_back"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:hint="@string/confirm_password"
            android:singleLine="true"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/submit"
            android:background="@mipmap/login"
            android:textColor="@color/colorWhite"
            />
    </LinearLayout>




</LinearLayout>