<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:clickable="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F6F6F6">

        <ImageButton
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:src="@mipmap/blue_back"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@+id/iv_back"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/describe_your_item"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_blue_edit_back">

                <ImageButton
                    android:id="@+id/mIb_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:src="@mipmap/left_arrow" />

                <Spinner
                    android:id="@+id/mCategory_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/mIb_button"
                    android:background="@null"/>


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue_edit_back"
                android:gravity="top"
                android:hint="@string/type_your_text_here"
                android:maxHeight="270dp"
                android:maxLength="1000"
                android:minHeight="70dp"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="0dp"
                android:text="Words used 0 out 1000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/item_type"
                android:textColor="@color/colorBlack" />

            <RadioGroup
                android:id="@+id/Rd_itemType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RB_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mnew"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/RB_used"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/used"
                    android:textSize="12sp" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/mProperty_linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/property_type"
                    android:textColor="@color/colorBlack" />

                <RadioGroup
                    android:id="@+id/RD_propertyType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/RB_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rent"
                        android:textSize="12sp" />

                    <RadioButton
                        android:id="@+id/RB_Buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/buy"
                        android:textSize="12sp" />

                </RadioGroup>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/post_image"
                android:src="@mipmap/select_2" />


            <Button
                android:id="@+id/bt_Next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/button_back"
                android:elevation="10dp"
                android:text="@string/next"
                android:textColor="@color/colorWhite"

                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>