<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgound"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mTool_Relative"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:src="@mipmap/backicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/titleForgotPassword"
            android:textColor="#fff" />
    </RelativeLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@mipmap/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/we_just_need_your_registered_email_id_to_send_you_password_reset_instructions"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="40dp"
        android:background="@drawable/edit_back"
        android:drawableLeft="@mipmap/email"
        android:drawablePadding="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/email_address"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        />
    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        android:background="@mipmap/login"
        android:textColor="@color/colorWhite"
        />
</LinearLayout>